# sanic-rest-framework

./: pyproject.toml
rest_framework/: __init__.py
